# TrueConf_test_project

./: README.md
boost_async/server/: CMakeLists.txt  base_session.h  connection.cpp  connection.h  echo_session.cpp  echo_session.h  main.cpp
boost_sync/client/: CMakeLists.txt  main.cpp
boost_sync/server/: CMakeLists.txt  main.cpp
coroutines/server/: CMakeLists.txt  connection.cpp  connection.h  main.cpp
coroutines/server/coroutines_support/: read_awaiter.cpp
coroutines/server/net_headers/: net.h
coroutines/server/sessions/: base_session.h  echo_session.h
server/: main.cpp  makefile
